# snooker

./: CMakeLists.txt  CMakePresets.json
src/: ball.c  ball.h  camera.c  camera.h  colours.h  config.h  layout.c  layout.h  main.c  render.c  render.h  table.c  table.h  utils.c  utils.h  vec2.c  vec2.h
